--- a/templates/predict.html
+++ b/templates/predict.html
@@ -3,23 +3,79 @@
 <html>
     <head>
         <title>Student Grade Prediction</title>
+      <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+      <style>
+        .parameters {
+          font-family: Roboto;
+          font-size: 25px;
+        }
+      </style>
     </head>
     <body>
-        <div class="login">
+      {% include 'nav.html' %}
+      
+        <div class="login text-center">
             <h1>Predict the Grade of the Student</h1>
             <h3> Enter the following values to predict: </h3>
         
         <form action="{{ url_for('predict')}}"method="post">
-          <label> Select school </label>  
+          <div class="mb-3">
+          
+          <label class='parameters'> Select school </label> <br>
           <label id='GP'> GP
             <input id='GP' type="radio" name="school" value=1>
           </label>
           <label id='MS'> MS
           <input id='MS'type="radio" name="school" value=0>
             </label>
+          <br><hr>
+          
+          <label class='parameters'> Gender </label>  <br>
+          <label id='Male'> Male
+            <input id='Male' type="radio" name="gender" value=0>
+          </label>
+          <label id='Female'> Female
+          <input id='Female'type="radio" name="gender" value=1>
+            </label>
+          <br><hr>
+          
+          <label class='parameters'> Age </label>  <br>
+          <input type="text" name="Age" placeholder="Age" required="required"/>
+          <br><hr>     
+
+          <label class='parameters'> Address </label> <br>            
+          <label id='U'> Urban
+            <input id='U' type="radio" name="address" value=1>
+          </label>
+          <label id='R'> Rural
+          <input id='R'type="radio" name="address" value=0>
+            </label>
+          <br><hr> 
+
+            <label class='parameters'> Family Size </label> <br>
+          <label id='GT3'> Greater than 3
+            <input id='GT3' type="radio" name="Family Size" value=1>
+          </label>
+            <br>
+          <label id='LE3'> Less than 3
+          <input id='LE3'type="radio" name="Family Size" value=0>
+            </label>
+          <br><hr>
+          
+
             
+          </div>
+
+          
+
+          
+
+
+          
         
-            <button type="submit" class="btn">Predict</button>
+            <button type="submit" class="btn btn-success">Predict</button>
 
             {{feat}}
         
