--- a/templates/predict.html
+++ b/templates/predict.html
@@ -459,10 +459,10 @@
             <label class='parameters'>Number of Days Absent</label> <br>
           <input type="text" name="absent" placeholder="Absences" required="required"/>
           <br><hr>  
-            <label class='parameters'>Grade in Exam 1</label> <br>
+            <label class='parameters'>Grade in Exam 1 (0-20)</label> <br>
           <input type="text" name="G1" placeholder="Grade in Exam 1" required="required"/>
           <br><hr> 
-            <label class='parameters'>Grade in Exam 2</label> <br>
+            <label class='parameters'>Grade in Exam 2 (0-20)</label> <br>
           <input type="text" name="G2" placeholder="Grade in Exam 2" required="required"/>
           <br><hr>    
           </div>
