--- a/static/style.css
+++ b/static/style.css
@@ -93,3 +93,23 @@ label{
   font-family:"Nunito Sans",Helvetica,Arial,sans-serif; 
   font-weight: bold;
 }
+
+.big_complaint{
+  
+}
+
+.box{
+  position: relative;
+  width: auto;
+  height: auto;
+  margin: 10px 10px;  
+  border-radius: 15px;
+  padding: 15px;
+  box-shadow: -3px 1px 21px -9px rgba(0,0,0,0.67);
+}
+
+.main_2{
+  margin-left: 300px;
+  padding: 15px;
+}
+
