--- a/templates/my_tickets.html
+++ b/templates/my_tickets.html
@@ -13,7 +13,7 @@
     {% include 'sidebar.html' %}
 
     <div class="main_1">
-
+    
      <div class='row'>
         <div class='col 1'>
           <h6 class = 'coltitle'> Complaint Id </h6>
@@ -50,7 +50,10 @@
         <hr>
        
       <div>
+        
+        
      {% for ticket in tickets %}
+      <div class='box'>
       <div class='row'>
         <div class='col 1'>
           {{ ticket['complaint_id'] }}
@@ -82,13 +85,14 @@
 
         <div class='col 1'>
           {{ ticket['tags'] }} 
-        </div>
-        <br>
-        <hr>
-      <div>
-     {% endfor %}
-      
-    </div>
+        </div>   
+        
+      </div>
+        
+      </div>
+       
+     {% endfor %}     
+   
 
          
       </div>
