--- a/templates/all_tickets.html
+++ b/templates/all_tickets.html
@@ -57,7 +57,7 @@
         <div class='box'>
         <div class='row'>
           <div class='col 1'>
-            {{ ticket['complaint_id'] }}
+            <a href="/tickets/{{ticket['complaint_id']}}" class="link">{{ ticket['complaint_id'] }}</a>
           </div>
 
           <div class='col 1'>
