--- a/templates/submitted.html
+++ b/templates/submitted.html
@@ -12,16 +12,17 @@
 
     {% include 'sidebar.html' %}
 
-    <div class="main_1">
-      <img class="intro_pic" src="https://TicketClassification1.sakshii2004.repl.co/static/intro_pic.png" alt="welcome picture">
+    <div style="margin-left:230px; padding: 15px;">
+      <img style="height: 600px;"
+        src="https://TicketClassification1.sakshii2004.repl.co/static/submitted.png" alt="welcome picture">
 
-      
+
     </div>
 
-         
+
       </div>
     </div>
-    
+
   </body>
-  
+
 </html>
